@@ -122,6 +122,9 @@ Mantis ChangeLog
  * Added authentication_api.php
  * Removed proj_user_api.php
  * Added obsolete.php that checks for obsolete variables.
+ * Renamed report_add.php to bug_add.php
+ * Renamed report_bug_page.php to bug_add_page.php
+ * Renamed report_bug_advanced_page.php to bug_add_advanced_page.php
 
 2002.08.23  -  0.17.5
  * Corrected bug_delete.php and bug_delete_page.php, which ignored the $g_allow_bug_delete_access_level setting.
